(C) 2008-2022 Advanced Micro Devices, Inc. All Rights Reserved.

AOCL Crypto - Release Notes - AOCL version 4.0.1
------------------------------------------------

AOCL Crypto Contents
--------------------
AOCL-Crypto is a library consisting of basic cryptographic functions
optimized for AMD Zen microarchitecture. This library has multiple
implementations of different AES cryptographic encryption / decryption and SHA2, SHA3 Digest routines.

Hightlights of AOCL Crypto version 4.0.1
----------------------------------------
This is the first release of the AOCL-Crypto library and supports the following functions.
    * AES Encrypt / Decrypt routines which will support the following cipher schemes:
          - CBC, CFB, OFB, CTR, GCM, XTS, CCM.
    * SHA2 Digest routines for the following schemes:
          - SHA2_224, SHA2_256, SHA2_384, SHA2_512
    * SHA3 Digest routines for the following schemes:
          - SHA3_224, SHA3_256, SHA3_384, SHA3_512, SHAKE128, SHAKE256