@@ -1,6 +1,6 @@
 BSD 3-Clause License
 
-Copyright (C) 2022 Advanced Micro Devices, Inc.
+Copyright (C) 2022-2023 Advanced Micro Devices, Inc.
 
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions are met:
